<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DS Tutorials</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="ds_tutorial">Data Structure</string>
    <string name="click">Click To Start</string>
    <string name="tutorials">Tutorials</string>
    <string name="option">Choose an option</string>
    <string name="link_list">Linked List</string>
    <string name="stack">Stack</string>
    <string name="queue">Queue</string>
    <string name="tree">Tree</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="text_1">null</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list">List</string>
    <string name="heading1">Stack</string>
    <string name="illustration">Illustrations</string>
    <string name="operation">Operations</string>
    <string name="heading2">Queue</string>
    <string name="types">Types</string>
    <string name="heading3">Linked List</string>
    <string name="heading4">Trees</string>
    <string name="term">Terminology</string>
    <string name="right_arrow">&gt;</string>
    <string name="left_arrow">&lt;</string>
    <string name="push">PUSH:</string>
    <string name="pop">POP:</string>
    <string name="illustration1">Illustration 1</string>
    <string name="illustration2">Illustration 2</string>
    <string name="illustration3">Illustration 3</string>
    <string name="illustration4">Illustration 4</string>
    <string name="dequeue">Double-Ended Queue (Dequeue)</string>
    <string name="p_queue">Priority Queue</string>
    <string name="single_linklist">Singly Linked List</string>
    <string name="double_linklist">Doubly Linked List</string>
    <string name="circular_linklist">Circular Linked List</string>
    <string name="insertion">INSERTION:</string>
    <string name="deletion">DELETION:</string>
    <string name="show">Show Illustration</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>

</resources>