<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Pushing something on the stack means 'placing it on top'." />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pop"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Popping something from the stack means 'taking the top thing' off the stack." />

   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="210dp"
    >
    
<Button
    android:id="@+id/button1"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:text="@string/illustration1" />

<Button
    android:id="@+id/button2"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:text="@string/illustration2" />

 </LinearLayout>
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"  
    android:layout_marginTop="5dp"
    >
    
<Button
    android:id="@+id/button3"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:text="@string/illustration3" />

<Button
    android:id="@+id/button4"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="0dp"
    android:text="@string/illustration4" />
 </LinearLayout>
</LinearLayout>